# StockCalculator

./: .gitignore  README.md  pyproject.toml  stock_calculator.py  test_stock.py
src/: app.py  stock_calculator.py  test_stock.py
src/ui/: app_ui.py  app_ui.ui
