[tool.poetry]
name = "StockCalculator"
version = "0.1.0"
description = "Stock Calculator"
authors = ["chenrb"]

[tool.poetry.dependencies]
python = "3.10.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
